<resources>
    <string name="app_name">SwipeDL</string>
    <string name="start">Start</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_top_menu">TopMenu</string>
    <string name="swipe">Swipe</string>
    <string name="start_game">Start Game</string>
    <string name="settings">Settings</string>
    <string name="how_to_play">How To Play</string>
    <string name="high_scores">High Scores</string>
    <string name="game">Game</string>
    <string name="title_activity_settings">Settings</string>
    <string name="time_limit">Time Limit</string>
    <string name="drag_limit">Drag Limit</string>
    <string name="option_one">1</string>
    <string name="option_two">2</string>
    <string name="option_three">3</string>
    <string name="one_player">One Player</string>
    <string name="two_players">Two Players</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="five_seconds">5s</string>
    <string name="ten_seconds">10s</string>
    <string name="thirty_seconds">30s</string>
    <string name="ten_drags">10 drags</string>
    <string name="fifty_drags">50 drags</string>
    <string name="hundred_drags">100 drags</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title_activity_high_scores">HighScores</string>
    <string name="zero">0</string>
    <string name="select_group">Select Group:</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="seconds">seconds</string>
    <string name="drags">drags</string>
    <string name="pause">| |</string>
    <string name="instructions_subheading_1">How to Play</string>
    <string name="instructions_subheading_2">Objective</string>
    <string name="instructions_subheading_3">Drag Area</string>
    <string name="instructions_text_1">You register a drag by placing a finger on the screen, moving it across the screen in an
    up or down direction, and releasing it from the screen.</string>
    <string name="instructions_text_2">The aim is to either register as many drags as possible in a certain time, or to
    complete the target number of drags as fast as possible.</string>
    <string name="instructions_text_3">The area in which drags are recorded is the off colour box in the center of the screen. Finger
    drags are only recorded within this area.</string>
    <string name="three">3</string>
    <string name="play">Play</string>
    <string name="play_again">Play Again</string>
    <string name="new_high_score">New High Score!</string>
</resources>
