<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dominik.swipedl.Instructions">

    <TextView
        android:id="@+id/heading"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/title_activity_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/subheading1"
        android:textStyle="bold"
        android:text="@string/instructions_subheading_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/text1"
        android:text="@string/instructions_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/subheading1" />

    <TextView
        android:id="@+id/subheading2"
        android:textStyle="bold"
        android:text="@string/instructions_subheading_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/text2"
        android:text="@string/instructions_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/subheading2" />

    <TextView
        android:id="@+id/subheading3"
        android:textStyle="bold"
        android:text="@string/instructions_subheading_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/text3"
        android:text="@string/instructions_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/subheading3" />

</RelativeLayout>
