<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:layout_gravity="center|top"
    android:background="#ffe4e4ff"
    tools:context="com.dominik.swipedl.Settings" >

    <LinearLayout
        android:id="@+id/topMenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/GameMenuBar"
            android:text="@string/play"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="1dp"
            android:textColor="#fff1f1f1"
            android:background="#ff0a075f" />

        <Button
            android:id="@+id/SettingsMenuBar"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="1dp"
            android:textColor="#ff0a075f"
            android:background="#ffe4e4ff"
            android:clickable="false" />

        <Button
            android:id="@+id/HighScoresMenuBar"
            android:text="@string/high_scores"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#fff1f1f1"
            android:background="#ff0a075f" />
    </LinearLayout>

    <TextView
        android:id="@+id/Settings"
        android:text="@string/settings"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topMenu"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp" />

    <LinearLayout
        android:id="@+id/numPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Settings"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/OnePlayer"
            android:text="@string/one_player"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#ffd9d9f4"
            android:textColor="#ff0a075f"
            android:clickable="true"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/TwoPlayer"
            android:text="@string/two_players"
            android:layout_toRightOf="@+id/OnePlayer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#ffd9d9f4"
            android:textColor="#ff0a075f"
            android:clickable="true"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/GameMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numPlayers"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/TimeLimit"
            android:text="@string/time_limit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#ffd9d9f4"
            android:textColor="#ff0a075f"
            android:clickable="true"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/DragLimit"
            android:text="@string/drag_limit"
            android:layout_toRightOf="@+id/TimeLimit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#ffd9d9f4"
            android:textColor="#ff0a075f"
            android:clickable="true"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/GameModeOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameMode"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" >

        <Button
            android:id="@+id/GameModeOptionOne"
            android:text="@string/option_one"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#ffd9d9f4"
            android:textColor="#ff0a075f"
            android:clickable="true"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/GameModeOptionTwo"
            android:text="@string/option_two"
            android:layout_toRightOf="@+id/GameModeOptionOne"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#ffd9d9f4"
            android:textColor="#ff0a075f"
            android:clickable="true"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/GameModeOptionThree"
            android:text="@string/option_three"
            android:layout_toRightOf="@+id/GameModeOptionTwo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#ffd9d9f4"
            android:textColor="#ff0a075f"
            android:clickable="true"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameModeOptions"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" >

        <Button
            android:id="@+id/Easy"
            android:text="@string/easy"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#ffd9d9f4"
            android:textColor="#ff0a075f"
            android:clickable="true"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/Medium"
            android:text="@string/medium"
            android:layout_toRightOf="@+id/Easy"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#ffd9d9f4"
            android:textColor="#ff0a075f"
            android:clickable="true"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/Hard"
            android:text="@string/hard"
            android:layout_toRightOf="@+id/Medium"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#ffd9d9f4"
            android:textColor="#ff0a075f"
            android:clickable="true"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/returnHomeButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficulty"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/Save"
            android:text="@string/save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#ffd9d9f4"
            android:textColor="#ff0a075f"
            android:layout_alignParentLeft="true"  />

        <Button
            android:id="@+id/dummyLayoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <Button
            android:id="@+id/Cancel"
            android:text="@string/cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#ffd9d9f4"
            android:textColor="#ff0a075f"
            android:layout_toRightOf="@+id/dummyLayoutButton" />
    </LinearLayout>

    <TextView
        android:id="@+id/debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/returnHomeButtons"
        android:text="" />

</RelativeLayout>